--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
   "bugs": {
     "url": "https://github.com/MomsFriendlyDevCo/doop-service-dirty-checker/issues"
   },
-  "homepage": "https://github.com/MomsFriendlyDevCo/doop-service-dirty-checker#readme",
-  "dependencies": {
-  }
+  "homepage": "https://github.com/MomsFriendlyDevCo/doop-service-dirty-checker#readme"
 }
