--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A dirtyChecker service for the Doop framework",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MomsFriendlyDevCo/doop-service-dirty-checker.git"
+    "url": "git+https://github.com/MomsFriendlyDevCo/doop-dirty-checker.git"
   },
   "keywords": [
     "doop"
@@ -12,10 +12,7 @@
   "author": "Matt Carter <m@ttcarter.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MomsFriendlyDevCo/doop-service-dirty-checker/issues"
+    "url": "https://github.com/MomsFriendlyDevCo/doop-dirty-checker/issues"
   },
-  "homepage": "https://github.com/MomsFriendlyDevCo/doop-service-dirty-checker#readme",
-  "workspaces": [
-    "../*"
-  ]
+  "homepage": "https://github.com/MomsFriendlyDevCo/doop-dirty-checker#readme"
 }
